# YTRC-FastAPI-Backend

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_SIMULATION.md  TICKET_SIMULATION.md  database_schema.md.resolved  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  setup-server.sh  simulate_tickets.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: router.py
app/core/: config.py  deps.py  permissions.py  security.py  socket_manager.py
app/db/: session.py
app/models/: __init__.py  address.py  approval_log.py  approval_request.py  book_view.py  booking.py  booking_lab_sample.py  cpk_analysis.py  e_signature.py  it_asset.py  it_ticket.py  job_order.py  job_order_log.py  knowledge_book.py  notification.py  notification_group.py  notification_setting.py  pool.py  pool_item.py  post.py  production_report.py  production_report_row.py  raw_material_plan.py  raw_material_plan_pool_detail.py  raw_material_plan_row.py  refresh_token.py  role.py  rubber_type.py  shipping_plan.py  shipping_plan_item.py  supplier.py  ticket_comment.py  user.py
app/schemas/: approval.py  auth.py  booking.py  cpk_analysis.py  e_signature.py  it_asset.py  it_ticket.py  job_order.py  knowledge_book.py  notification.py  notification_group.py  pool.py  post.py  production_report.py  raw_material_plan.py  role.py  rubber_type.py  shipping_plan.py  supplier.py  (+1 more)
docs/: api-auth-users-suppliers.md  deployment-guide.md  fe-quickstart.md
ytrc_center_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+50 files in other folders)
